# hassio-samaraenergo

./: README.md  hacs.json  pyproject.toml
custom_components/samaraenergo/: __init__.py  calculator.py  client.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  sensor.py  services.py  services.yaml
custom_components/samaraenergo/translations/: en.json
